--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Check Risk</title>
+    <title>Statistics</title>
 </head>
 <body>
-    <h1>At Risk:</h1>
+
 </body>
 </html>
