--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -1,5 +1,7 @@
 body {
     text-align: center;
+    background-color: #333;
+    color: white;
 }
 
 input[type=submit]  {
@@ -8,6 +10,33 @@ input[type=submit]  {
     cursor: pointer;
 }
 
-input {
+input[type=text] {
     text-align: center;
+    border-radius: 5px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: top;
+  display: inline;
+}
+
+li a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
 }
