added images css files and logic to use model

--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Statistics</title>
+    <link rel="stylesheet" href="{{ url_for('static',    filename='css/main-style.css') }}">
 </head>
 <body>
-
+    <ul>
+        <li><a href="/">Home</a> </li>
+    </ul>
+    <ul>
+        <li><a href="/risk-factors">Risk Factors</a> </li>
+        <li><a href="/trends">Trends</a></li>
+        <li><a href="/accuracy">Accuracy</a></li>
+    </ul>
+    <p>The above links will provide additional some information on the risk factors used in assessing the patients risk</p>
+    <p>In addition they show trends in the data and show supporting evidence for this tools accuracy.</p>
 </body>
 </html>
