--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="home.html">Home</a> </li>
+        <li><a href="/">Home</a> </li>
         <li><a href="/statistics">Statistics</a> </li>
     </ul>
     <h1>Congenital Heart Disease Risk Checker</h1>
