Adjustment to navigation between pages

--- a/templates/check-risk.html
+++ b/templates/check-risk.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="{{ url_for('static',    filename='css/main-style.css') }}">
 </head>
 <body>
-
+    <ul>
+        <li><a href="/">Home</a> </li>
+        <li><a href="/statistics">Statistics</a> </li>
+    </ul>
+    <ul>
+        <li><a href="/">Back</a> </li>
+    </ul>
 </body>
 </html>
