--- a/templates/no-risk.html
+++ b/templates/no-risk.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="{{ url_for('static',    filename='css/main-style.css') }}">
 </head>
 <body>
-
+    <ul>
+        <li><a href="/">Home</a> </li>
+        <li><a href="/statistics">Statistics</a> </li>
+    </ul>
+    <ul>
+        <li><a href="/">Back</a> </li>
+    </ul>
     <h1>Patient is not at risk of developing congenital heart disease in the next 10 years.</h1>
 </body>
 </html>
